<resources>
    <string name="planet_prompt">Choose a planet</string>
    <string-array name="Blood_Group_Dropdown">
        <item></item>
        <item> A+ </item>
        <item> A- </item>
        <item> B+ </item>
        <item> B- </item>
        <item> AB+ </item>
        <item> AB- </item>
        <item> O+ </item>
        <item> O- </item>
    </string-array>
    <string-array name="ClientsPrivious_History_Dropdown">
        <item>No </item>
        <item>Case:1</item>
        <item>Case:2</item>
        <item>Case:3</item>
        <item>Case:4 </item>
        <item>Case:5 </item>
    </string-array>
    <string-array name="Health_Id">
        <item>Health ID</item>
        <item>Mobile No </item>
        <item>National ID</item>
        <item>Birth Reg. No</item>
        <item>NRC ID</item>
        <item>Advance Search</item>
    </string-array>
    <string-array name="nrcClientsSex">
        <item>পুরুষ </item>
        <item>মহিলা </item>
        <item>হিজরা </item>
    </string-array>
    <string name="general_yes">"হ্যাঁ"</string>
    <string name="general_no">"না"</string>
    <string name="general_treatment">"চিকিৎসা:"</string>
    <string name="general_advice">"পরামর্শ:"</string>
    <string name="general_refer">"রেফার:"</string>
    <string name="general_facility_name">"কেন্দ্রের নাম:"</string>
    <string name="general_cause">"	কারণ:"</string>
    <string-array name="list_item">
        <item>সেবাগ্রহনের তারিখ:</item>
        <item>রক্তচাপ (মিঃ মিঃ মার্কারি):</item>
        <item>রক্তচাপ (মিঃ মিঃ মার্কারি):</item>
        <item>ওজন (কেজি):</item>
        <item>ইডিমা:</item>
        <item>জরায়ুর উচ্চতা (সপ্তাহ):</item>
        <item>ফিটাসের হৃদপিণ্ডের গতি \n(প্রতি মিনিটে):</item>
        <item>ফিটাল প্রেজেনটেশন:</item>
        <item>হিমোগ্লোবিন:</item>
        <item>জন্ডিস:</item>
        <item>প্রস্রাব পরীক্ষা: সুগার:</item>
        <item>প্রস্রাব পরীক্ষা: এলবুমিন:</item>
        <item>বিপদ চিহ্ন / জটিলতা:</item>
        <item>অসুবিধা:</item>
        <item>রোগ:</item>
        <item>চিকিৎসা:</item>
        <item>পরামর্শ:</item>
        <item>রেফার:</item>
        <item>কেন্দ্রের নাম:</item>
        <item>কারণ:</item>
        <item>রক্তস্বল্পতা :</item>
        <item>রেফার:</item>
        <item>কেন্দ্রের নাম:</item>
    </string-array>
    <string name="pnc_m_poridorshan">পরিদর্শন</string>
    <string name="pnc_m_date">সেবাগ্রহনের তারিখ:</string>
    <string-array name="list_item_pnc_mother">
        <item>সেবাগ্রহনের তারিখ:</item>
        <item>রক্তচাপ (মিঃ মিঃ মার্কারি):</item>
        <item>ওজন (কেজি):</item>
        <item>ইডিমা:</item>
        <item>জরায়ুর উচ্চতা (সপ্তাহ):</item>
        <item>ফিটাসের হৃদপিণ্ডের গতি (প্রতি মিনিটে):</item>
        <item>ফিটাল প্রেজেনটেশন:</item>
        <item>রক্তস্বল্পতা / হিমোগ্লোবিন:</item>
        <item>জন্ডিস:</item>
        <item>প্রস্রাব পরীক্ষা: সুগার:</item>
        <item>প্রস্রাব পরীক্ষা: এলবুমিন:</item>
        <item>বিপদ চিহ্ন / জটিলতা:</item>
        <item>অসুবিধা:</item>
        <item>রোগ:</item>
        <item>চিকিৎসা:</item>
        <item>পরামর্শ:</item>
        <item>রেফার:</item>
        <item>কেন্দ্রের নাম:</item>
        <item>কারণ:</item>
        <item>প্রসবোত্তর সেবা</item>
        <item>বর্তমান সেবার তথ্য: মা</item>
        <item>তাপমাত্রা:</item>
        <item>স্তনের অবস্থা:</item>
        <item>জরায়ুর ইনভলিউশন:</item>
        <item>স্রাব/ রক্তস্রাব:</item>
        <item>পেরিনিয়াম:</item>
        <item>পরিবার পরিকল্পনা পদ্ধতি(পরামর্শ / পদ্ধতি প্রদান):</item>
    </string-array>
    <string name="anc_service">"গর্ভকালীন সেবা ( ANC )"</string>
    <string name="delivery_service">"প্রসবকালীন সেবা ( Delivery )"</string>
    <string name="pnc_service">প্রসবোত্তর সেবা ( PNC )</string>
    <string name="delivery_related_info">"প্রসব সংক্রান্ত তথ্য"</string>
    <string name="delivery_place">"প্রসবের স্থান*:"</string>
    <string name="delivery_date">"প্রসবের তারিখ*:"</string>
    <string name="delivery_time">"সময়:"</string>
    <string name="delivery_type">"প্রসবের ধরণ*:"</string>
    <string name="service_center_name">"সেবাকেন্দ্রের নাম:"</string>
    <string name="admission_date">"আগমনের তারিখ:"</string>
    <string name="ward">"ওয়ার্ড:"</string>
    <string name="bed">"শয্যা:"</string>
    <string name="delivery_result">"প্রসবের ফলাফল:"</string>
    <string name="live_born">"জীবিত জন্ম:"</string>
    <string name="dead_born">"মৃত জন্ম:"</string>
    <string name="dead_born_fresh">"ফ্রেশ:"</string>
    <string name="dead_born_macerated">"ম্যাসারেটেড:"</string>
    <string name="child_sex">"লিঙ্গ:"</string>
    <string name="not_detected">"সনাক্ত করা যাই নি "</string>
    <string name="amtsl">"প্রসবের তৃতীয় ধাপের সক্রিয় ব্যবস্থাপনায় (AMTSL) যা অনুসরণ করা হয়েছে:"</string>
    <string name="oxytocin">"প্রসবের ১ মিনিটের মধ্যে অক্সিটোসিন প্রয়োগ"</string>
    <string name="traction">"গর্ভফুল প্রসবের জন্য নাভিরজ্জুতে নিয়ন্ত্রিত টান"</string>
    <string name="massage">"জরায়ু ম্যাসাজ"</string>
    <string name="epcotomi">"ইপিসিওটমি করা হয়েছে? "</string>
    <string name="oxytocinGiven">"অক্সিটোসিন না থাকলে মিসোপ্রোস্টল খাওয়ানো হয়েছে?"</string>
    <string name="providerName">"প্রসব সম্পাদনকারীর নাম:"</string>
    <string name="providerSelfLabel">"প্রসব সম্পাদনকারী:"</string>
    <string name="providerSelfValue">" আমি নিজে"</string>
    <string name="providerTitle">"পদবী:"</string>
    <string name="deliveryComplication">"প্রসব সংক্রান্ত জটিলতা:"</string>
    <string name="bloodLoss">"অতিরিক্ত রক্তক্ষরণ"</string>
    <string name="delayedDelivery">"বিলম্বিত প্রসব"</string>
    <string name="blockedDelivery">"বাধাগ্রস্থ প্রসব "</string>
    <string name="blockedPlacenta">"গর্ভফুল না পড়া "</string>
    <string name="heavyHeadache">"প্রচন্ড মাথা ব্যাথা"</string>
    <string name="blurryVision">" চোখে ঝাপসা দেখা "</string>
    <string name="onlyHead">"মাথা ছাড়া অন্য কোন অঙ্গ বের হওয়া"</string>
    <string name="convulsion">"খিচুঁনি "</string>
    <string name="deliveryExtra">"অন্যান্য"</string>
    <string name="newborn_add">"নবজাতক\nসংযোজন"</string>
    <string name="death_fresh_add">"মৃত জন্ম \nসংযোজন: ফ্রেশ"</string>
    <string name="death_macerated_add">"মৃত জন্ম \nসংযোজন:ম্যাসারেটেড"</string>
    <string-array name="FacilityType_DropDown">
        <item></item>
        <item> মেডিকেল কলেজ হাসপাতাল </item>
        <item> জেলা সদর হাসপাতাল </item>
        <item>মা ও শিশু কল্যাণ কেন্দ্র</item>
        <item> উপজেলা স্বাস্থ্য কমপ্লেক্স </item>
        <item> ইউনিয়ন স্বাস্থ্য ও পরিবার কল্যান কেন্দ্র </item>
        <item> কমিউনিটি ক্লিনিক </item>
        <item> এনজিও হাসপাতাল / ক্লিনিক / সেবা কেন্দ্র </item>
        <item> প্রাইভেট ক্লিনিক / হাসপাতাল </item>
        <item> অন্যান্য</item>
    </string-array>
    <string-array name="FacilityPlace_DropDown">
        <item></item>
        <item> বাড়ি </item>
        <item> সেবাকেন্দ্র </item>
    </string-array>
    <string-array name="DeliveryType_DropDown">
        <item></item>
        <item> স্বাভাবিক </item>
        <item> সিজারিয়ান </item>

    </string-array>
    <string-array name="DeliveryTime_DropDown">
        <item> AM </item>
        <item> PM </item>
    </string-array>
    <string-array name="DeliveryAttendant_DropDown">
        <item></item>
        <item>ডাক্তার</item>
        <item>নার্স</item>
        <item>পরিবার কল্যাণ পরিদর্শিকা (এফ.ডব্লিউ.ভি)</item>
        <item>উপ-সহকারী কমিউনিটি মেডিকেল অফিসার (এস.এ.সি.এম.ও)</item>
        <item>প্যারামেডিক্স </item>
        <item>স্বাস্থ্য সহকারী (এইচ.এ)/(সি.এস.বি.এ)</item>
        <item>পরিবার কল্যাণ সহকারী (এফ.ডব্লিউ.এ)/(সি.এস.বি.এ)</item>
        <item>ধাত্রী (টি.বি.এ)</item>
        <item>আত্মীয়/প্রতিবেশী</item>
    </string-array>
    <string name="anc_title">" প্রসব সংক্রান্ত তথ্য "</string>
    <string name="visit">"পরিদর্শন:"</string>
    <string name="other_source">অন্যান্য উৎস</string>
    <string name="service_date">"সেবাগ্রহনের তারিখ:"</string>
    <string name="blood_presser">"রক্তচাপ (মিঃ মিঃ মার্কারি):"</string>
    <string name="weight">"ওজন (কেজি):"</string>
    <string name="edema">"ইডিমা:"</string>
    <string name="uterus_height">"জরায়ুর উচ্চতা (সপ্তাহ):"</string>
    <string name="heart_speed">"ফিটাসের হৃদপিণ্ডের গতি \n(প্রতি মিনিটে):"</string>
    <string name="fetal_presentation">"ফিটাল প্রেজেনটেশন:"</string>
    <string name="anemia">"রক্তস্বল্পতা:"</string>
    <string name="hemoglobin">"হিমোগ্লোবিন:"</string>
    <string name="abdomen">"পেট :"</string>
    <string name="jaundice">"জন্ডিস:"</string>
    <string name="urine_test_sugar">"প্রস্রাব পরীক্ষা: সুগার:"</string>
    <string name="urine_test_albumin">"প্রস্রাব পরীক্ষা: এলবুমিন:"</string>
    <string name="danger_signs">"বিপদ চিহ্ন / জটিলতা:"</string>
    <string name="drawback">"অসুবিধা:"</string>
    <string name="disease">"রোগ:"</string>
    <string name="treatment">"চিকিৎসা:"</string>
    <string name="advice">"পরামর্শ:"</string>
    <string name="refer">"রেফার:"</string>
    <string name="center_name">"কেন্দ্রের নাম:"</string>
    <string name="reason">"কারণ:"</string>
    <string name="pnc_title">"প্রসবোত্তর সেবা"</string>
    <string name="pncInfo_mother">"বর্তমান সেবার তথ্য: মা"</string>
    <string name="temperature">"তাপমাত্রা:"</string>
    <string name="breast_condition">"স্তনের অবস্থা:"</string>
    <string name="cervix_involution">"জরায়ুর ইনভলিউশন:"</string>
    <string name="perineum">"পেরিনিয়াম:"</string>
    <string name="family_planning_methods">"পরিবার পরিকল্পনা পদ্ধতি\n(পরামর্শ / পদ্ধতি প্রদান):"</string>
    <string name="family_planning_methods_2">"পরিবার পরিকল্পনা পদ্ধতি "</string>
    <string name="cervix">"জরায়ুমুখ:"</string>
    <string name="pac_uterus_height">"জরায়ুর উচ্চতা :"</string>
    <string name="visitDate">"সেবাগ্রহনের তারিখ:"</string>
    <string name="bpSystolic">"রক্তচাপ (মিঃ মিঃ মার্কারি) :"</string>
    <string name="breastCondition">"স্তনের অবস্থা:"</string>
    <string name="uterusInvolution">"জরায়ুর ইনভলিউশন:"</string>
    <string name="hematuria">"স্রাব/ রক্তস্রাব:"</string>
    <string name="serviceSource">"পরিবার পরিকল্পনা পদ্ধতি(পরামর্শ / পদ্ধতি প্রদান) :"</string>
    <string name="referCenterName">"কেন্দ্রের নাম :"</string>
    <string name="referReason">"কারণ:"</string>
    <string-array name="Breast_Condition_DropDown">
        <item></item>
        <item> স্বাভাবিক </item>
        <item> ফোলা</item>
        <item> ব্যথাযুক্ত </item>
    </string-array>
    <string-array name="Discharge_Bleeding_DropDown">
        <item></item>
        <item> স্বাভাবিক </item>
        <item> দূর্গন্ধযুক্ত </item>
        <item> অতিরিক্ত </item>
    </string-array>
    <string-array name="Perineum_DropDown">
        <item></item>
        <item> স্বাভাবিক </item>
        <item> ছিঁড়ে গিয়েছে  </item>
        <item> অন্যান্য জটিলতা </item>
    </string-array>
    <string-array name="Cervix_Involution_DropDown">
        <item></item>
        <item> নাভি বরাবর </item>
        <item> নাভি হতে ২-৩ ইঞ্চি নিচে  </item>
        <item> অনুভব করা যাচ্ছে না </item>
    </string-array>
    <string name="newborn_related_info">"নবজাতক সংক্রান্ত তথ্য "</string>
    <string name="child">"সন্তান: "</string>
    <string name="son">"ছেলে *"</string>
    <string name="daughter">"মেয়ে *"</string>
    <string name="born_weight">"জন্ম ওজন (কেজি):"</string>
    <string name="premature_birth_before_37_weeks_full">"অপরিণত জন্ম: "</string>
    <string name="wipe_within_one_minute">"১ মিনিটের মধ্যে মোছানো হয়েছে:"</string>
    <string name="resastation">"রিসাসসিটেশন:"</string>
    <string name="placenta_cutting">"নাড়ি কাটার পর নাড়িতে ৭.১% ক্লোরহেক্সিডিন দ্রবন ব্যবহার করা হয়েছে:"</string>
    <string name="fitted_with_mother_skin">"নাড়ি কাটার পর মায়ের ত্বকে নবজাতককে লাগানো হয়েছে:"</string>
    <string name="breast_feeding">"জন্মের ১ ঘন্টার মধ্যে বুকের দুধ খাওয়ানো হয়েছে:"</string>
    <string name="child_refer">রেফার </string>
</resources>