<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.sci.rhis.fwc.ancInfoFieldFragment"
    android:orientation="horizontal"
    android:background="@drawable/fragmentborder"
    android:id = "@+id/ancInfoField">
// horizontal and vertical Scrollview
    <ScrollView android:id="@+id/ANCFragmentScroll" android:layout_height="wrap_content" android:layout_width="wrap_content" android:scrollbars="horizontal|vertical">
    // HorizontalScrollview
    <HorizontalScrollView android:id="@+id/ANCFragmentHorizontalScroll" android:layout_height="fill_parent" android:layout_width="wrap_content">
     <LinearLayout  android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal" android:background="@drawable/fragmentborder">

    <LinearLayout
    android:id="@+id/ancText" android:layout_marginLeft="10dp" android:layout_marginTop="10dp" android:paddingBottom="20dp" android:orientation="vertical" android:layout_centerVertical="true" android:layout_width="330dp" android:layout_height="wrap_content" android:background="#FFFFFF">

    <TextView android:id="@+id/ancVisit" android:text="@string/visit" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancServiceDate" android:text="@string/service_date" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
    <TextView android:id="@+id/ancBloodPresser" android:text="@string/blood_presser" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
    <TextView android:id="@+id/ancWeight" android:text="@string/weight" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
    <TextView android:id="@+id/ancEdema" android:text="@string/edema" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
    <TextView android:id="@+id/ancUterusHeight" android:text="@string/uterus_height" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancHeartSpeed" android:text="@string/heart_speed" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancFetalPresentation" android:text="@string/fetal_presentation" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
    <TextView android:id="@+id/ancAnemiaHemoglobin" android:text="@string/anemia_hemoglobin" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancJaundice" android:text="@string/jaundice" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancUrineSugar" android:text="@string/urine_test_sugar" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
    <TextView android:id="@+id/ancUrineAlbumin" android:text="@string/urine_test_albumin" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
    <TextView android:id="@+id/ancDangerSigns" android:text="@string/danger_signs" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
    <TextView android:id="@+id/ancDrawback" android:text="@string/drawback" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancDisease" android:text="@string/disease" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancTreatment" android:text="@string/treatment" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancAdvice" android:text="@string/advice" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancRefer" android:text="@string/refer" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancReferCenterName" android:text="@string/center_name" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <TextView android:id="@+id/ancReason" android:text="@string/reason" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
</LinearLayout>
    <LinearLayout
        android:id="@+id/ancValue" android:layout_marginLeft="0dp" android:layout_marginTop="10dp" android:paddingBottom="20dp" android:orientation="vertical" android:layout_centerVertical="true" android:layout_width="330dp" android:layout_height="wrap_content" >

    <EditText android:id="@+id/ancVisitValue" android:inputType="number" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
    <EditText android:id="@+id/ancServiceDateValue" android:inputType="date" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
     <EditText android:id="@+id/ancBloodPresserValue" android:inputType="number" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
     <EditText android:id="@+id/ancWeightValue" android:inputType="number" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <Spinner android:id="@+id/ancEdemaValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
        <EditText android:id="@+id/ancUterusHeightValue" android:inputType="number" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <EditText android:id="@+id/ancHeartSpeedValue" android:inputType="number" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
        <Spinner android:id="@+id/ancFetalPresentationValue" android:inputType="number" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <EditText android:id="@+id/ancAnemiaHemoglobinValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <Spinner android:id="@+id/ancJaundiceValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
        <Spinner android:id="@+id/ancUrineSugarValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <Spinner android:id="@+id/ancUrineAlbuminValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
        <Spinner android:id="@+id/ancDangerSignsValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <Spinner android:id="@+id/ancDrawbackValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
        <Spinner android:id="@+id/ancDiseaseValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <Spinner android:id="@+id/ancTreatmentValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <Spinner android:id="@+id/ancAdviceValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
        <Spinner android:id="@+id/ancReferValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />
        <Spinner android:id="@+id/ancReferCenterNameValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle"/>
        <Spinner android:id="@+id/ancReasonValue" android:inputType="text" android:textSize="20dp" android:layout_width="330dp" android:layout_height="50px" android:layout_marginTop="10dp" android:background="@drawable/edittextstyle" />

    </LinearLayout>
        </LinearLayout>
    </HorizontalScrollView>
    </ScrollView>
    </LinearLayout>
